<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Tlenoid</string>
	<string name="send">Send</string>
	<string name="apply">Apply</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="quit">Quit</string>
	<string name="wrong_pass">Incorrect password</string>
	<string name="me">me</string>
	<string name="please_setup_account">Empty username or password.  Please setup your account!  Press MENU button and choose Settings</string>
	<string name="getting_roster">Getting roster. Please wait…</string>
	<string name="singing_in">Signing in. Please wait…</string>
	<string name="getting_user_info">Getting user info. Please wait…</string>
	<string name="got_fatal_error">Got fatal error</string>
	<string name="session_disconnected">Session disconnected by the server</string>
	<string name="do_you_want_to_sign_off">Are you sure you want to sign off?</string>
	<string name="user_info_not_available">User information is not available.</string>
	<string name="user_info_available">User information from public directory:</string>

	<string name="status_unauthorized">unauthorized</string>

	<string name="menu_close_chat">Close chat</string>
	<string name="menu_user_info">Contact info</string>
	<string name="menu_user_edit">Edit contact</string>
	<string name="menu_user_remove">Remove contact</string>
	<string name="menu_presence">Presence</string>
	<string name="menu_settings">Settings</string>

	<string name="user_info_first_name">First name</string>
	<string name="user_info_default_name">default@login.pl</string>
	<string name="user_info_avatar_desc">Buddy avatar image</string>
	<string name="user_info_default_alias">Default alias</string>   
	<string name="user_info_last_name">Last name</string>
	<string name="user_info_nick">Nickname</string>
	<string name="user_info_email">E-mail address</string>
	<string name="user_info_alias">Alias:</string>
	<string name="user_info_city">City</string>
	<string name="user_info_school">School</string>
	<string name="user_info_sex">Sex</string>
	<string name="user_info_age">Age</string>
	<string name="user_info_job">Job</string>
	<string name="user_info_looking_for">Looking for</string>
	<string name="user_info_voice">Voice</string>
	<string name="user_info_plans">Plans</string>
	<string name="user_info_tlen_id">Tlen ID</string>
	<string name="user_info_unknown">unknown param</string>

	<string name="pref_user_name">User name</string>
	<string name="pref_user_name_desc">Provide your user name without @tlen.pl part</string>
	<string name="pref_password">Password</string>
	<string name="pref_password_desc">Please enter your password</string>
	<string name="pref_advance">Advanced</string>
	<string name="pref_default_presence">Default presence</string>
	<string name="pref_default_presence_desc">Choose default presence used after logging in</string>
	<string name="pref_save_note">Press BACK button to save settings</string>
	<string name="pref_auto_reconnect">Auto-reconnect</string>
	<string name="pref_auto_reconnect_desc">Enable to automatically sign-in to Tlen service after loss of network connection</string>
	<string name="pref_auto_away">Auto away</string>
	<string name="pref_auto_away_desc">Set status to "Away" after a period of inactivity</string>
	<string name="pref_chat_style">Chat window style</string>
	<string name="pref_chat_style_desc">Sets style for messages displayed in chat windows</string>
	<string name="pref_ui">Apperance</string>

	<!-- kolejnosc wazna - patrz Status.java -->
	<string-array name="Presences">
		<item>Available</item>
		<item>Away</item>
		<item>Extended away</item>
		<item>Do not disturb</item>
		<item>Chatty</item>
		<item>Invisible</item>
	</string-array>

	<string name="sure_to_remove_account">Do you want to remove this person from your contact list?</string>
	<string name="ok_remove">REMOVE</string>
	<string name="cancel">Cancel</string>
	
	<string name="statusImgDesc">Presence image</string>
	<string name="avatarImgDesc">Avatar image</string>
	<string name="unreadImgDesc">Unread message image</string>
	
	<string name="offline_tap_reconnect">offline - tap to reconnect</string>
	<string name="offline_connecting">connecting...</string>
	<string name="offline_reason">No network available or network connection has been lost</string>
	
	<string name="context_menu_go_to">Go to</string>
	<string name="context_menu_mail_to">Mail to</string>
	<string name="context_menu_copy_to_clipboard">Copy text to clipboard</string>
	<string name="context_menu_copied">Text has been copied to clipboard</string>
</resources>
